<resources>
    <string name="app_name">Albums</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="album_list_title">Album list</string>
    <string name="photo_list_item_image_content_description">Album photo</string>
    <string name="photo_detail_title">Photo detail</string>
    <string name="photo_detail_image_content_description">Selected photo of an album</string>
    <string name="status_image_content_description">Status image for loading data</string>
</resources>
