...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.albumdetail.AlbumDetailFragment">

        <TextView
            android:id="@+id/album_detail_title"
            style="@style/title_style"
            android:text="@{viewModel.album.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Selected album" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/album_detail_photo_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
...
